# transparent-encryption

./: Cargo.toml  README.md  tarpaulin-report.html
src/: lib.rs  reader.rs  writer.rs
tests/: invertible.rs  rand_data  writers_are_identical.rs
